# PairtreeOrchard

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
PairtreeOrchard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
conda.recipe/: meta.yaml
docs/: index.rst
src/: criterion.cpp  criterion.h  decision_tree.cpp  decision_tree.h  decision_tree_classifier.cpp  decision_tree_classifier.h  main.cpp  python_bindings.cpp  splitter.cpp  splitter.h
src/PairtreeOrchard/: __init__.py
src/PairtreeOrchard.egg-info/: PKG-INFO  SOURCES.txt
tests/: sim_dat.py  sim_data_ex2.csv  sim_data_ex2.py  test.py
trash/: CMakeLists.txt  setup.py
